--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,8 @@ fabric.properties
 
 # Ignore application configuration
 /config/application.yml
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
